--- a/causalimpact.qmd
+++ b/causalimpact.qmd
@@ -1,5 +1,11 @@
 ---
 title: "Bayesian Structural Time Series"
+share:
+  permalink: "https://book.martinez.fyi/causalimpact.html"
+  description: "Business Data Science: What Does it Mean to Be Data-Driven?"
+  linkedin: true
+  email: true
+  mastodon: true
 author:
   - name: Eray Turkel
   - name: Ignacio Martinez
