--- a/longbet.qmd
+++ b/longbet.qmd
@@ -1,5 +1,11 @@
 ---
 title: "LongBet: Heterogeneous Treatment Effects in Panel Data"
+share:
+  permalink: "https://book.martinez.fyi/longbet.html"
+  description: "Business Data Science: What Does it Mean to Be Data-Driven?"
+  linkedin: true
+  email: true
+  mastodon: true
 ---
 
 ## Introduction to LongBet
