--- a/bart.qmd
+++ b/bart.qmd
@@ -1,5 +1,11 @@
 ---
 title: "Bayesian Additive Regression Trees (BART)"
+share:
+  permalink: "https://book.martinez.fyi/bart.html"
+  description: "Business Data Science: What Does it Mean to Be Data-Driven?"
+  linkedin: true
+  email: true
+  mastodon: true
 ---
 
 ## BART: Bayesian Additive Regression Trees
