--- a/iv.qmd
+++ b/iv.qmd
@@ -1,5 +1,11 @@
 ---
 title: "Randomized Encouragement Design"
+share:
+  permalink: "https://book.martinez.fyi/iv.html"
+  description: "Business Data Science: What Does it Mean to Be Data-Driven?"
+  linkedin: true
+  email: true
+  mastodon: true
 ---
 
 A common business question that arises is: "What is the value of a given set of
