--- a/rce.qmd
+++ b/rce.qmd
@@ -1,5 +1,11 @@
 ---
 title: "Rapid-Cycle Evaluation for Program Improvement"
+share:
+  permalink: "https://book.martinez.fyi/rce.html"
+  description: "Business Data Science: What Does it Mean to Be Data-Driven?"
+  linkedin: true
+  email: true
+  mastodon: true
 ---
 
 ## What is Rapid-Cycle Evaluation?
