--- a/rct.qmd
+++ b/rct.qmd
@@ -1,5 +1,11 @@
 ---
 title: "The Gold Standard"
+share:
+  permalink: "https://book.martinez.fyi/rct.html"
+  description: "Business Data Science: What Does it Mean to Be Data-Driven?"
+  linkedin: true
+  email: true
+  mastodon: true
 ---
 
 Randomized controlled trials (RCTs) have a rich history, dating back to
