--- a/references.bib
+++ b/references.bib
@@ -453,3 +453,25 @@ url={https://books.google.com/books?id=ZXL6AQAAQBAJ}
   publisher={Penguin},
   url = 	 {https://www.google.com/books/edition/Thinking_in_Bets/CI-RDwAAQBAJ}
 }
+
+@Article{stuart2011matchit,
+  title = {{MatchIt}: Nonparametric Preprocessing for Parametric Causal Inference},
+  author = {Daniel E. Ho and Kosuke Imai and Gary King and Elizabeth A. Stuart},
+  year = {2011},
+  journal = {Journal of Statistical Software},
+  volume = {42},
+  number = {8},
+  pages = {1--28},
+  doi = {10.18637/jss.v042.i08},
+}
+
+@article{ho2007matching,
+  title={Matching as nonparametric preprocessing for reducing model dependence in parametric causal inference},
+  author={Ho, Daniel E and Imai, Kosuke and King, Gary and Stuart, Elizabeth A},
+  journal={Political analysis},
+  volume={15},
+  number={3},
+  pages={199--236},
+  year={2007},
+  publisher={Cambridge University Press}
+}
